// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.hbs [glimmer] format 1`] = `
"Expecting 'CLOSE_RAW_BLOCK', 'CLOSE', 'CLOSE_UNESCAPED', 'OPEN_SEXPR', 'CLOSE_SEXPR', 'ID', 'OPEN_BLOCK_PARAMS', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', 'SEP', got 'INVALID' (2:11)
  1 | <A >
> 2 | x, {{@name}
    |           ^
  3 |
Cause: Parse error on line 2:
<A >x, {{@name}
--------------^
Expecting 'CLOSE_RAW_BLOCK', 'CLOSE', 'CLOSE_UNESCAPED', 'OPEN_SEXPR', 'CLOSE_SEXPR', 'ID', 'OPEN_BLOCK_PARAMS', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', 'SEP', got 'INVALID'"
`;

exports[`invalid-2.hbs [glimmer] format 1`] = `
"Unclosed element \`@name\` (3:0)
  1 | <a>
  2 |
> 3 | <{@name>
    | ^^^^^^^^
  4 |
Cause: Unclosed element \`@name\`: 

|
|  <{@name>
|

(error occurred in 'an unknown module' @ line 3 : column 0)"
`;

exports[`invalid-3.hbs [glimmer] format 1`] = `
"Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (3:3)
  1 | <a>
  2 |
> 3 | {{}}
    |   ^
  4 |
Cause: Parse error on line 3:
<a>{{}}
-----^
Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE'"
`;

exports[`snippet: IMG [glimmer] format 1`] = `
"Unclosed element \`IMG\` (1:0)
> 1 | <IMG>
    | ^^^^^
Cause: Unclosed element \`IMG\`: 

|
|  <IMG>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: INPUT [glimmer] format 1`] = `
"Unclosed element \`INPUT\` (1:0)
> 1 | <INPUT>
    | ^^^^^^^
Cause: Unclosed element \`INPUT\`: 

|
|  <INPUT>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: area [glimmer] format 1`] = `
"<area> elements do not need end tags. You should remove it (1:6)
> 1 | <area></area>
    |      ^^^^^^^
Cause: <area> elements do not need end tags. You should remove it: 

|
|  </area>
|

(error occurred in 'an unknown module' @ line 1 : column 6)"
`;

exports[`snippet: base [glimmer] format 1`] = `
"<base> elements do not need end tags. You should remove it (1:6)
> 1 | <base></base>
    |      ^^^^^^^
Cause: <base> elements do not need end tags. You should remove it: 

|
|  </base>
|

(error occurred in 'an unknown module' @ line 1 : column 6)"
`;

exports[`snippet: basefont [glimmer] format 1`] = `
"Unclosed element \`basefont\` (1:0)
> 1 | <basefont>
    | ^^^^^^^^^^
Cause: Unclosed element \`basefont\`: 

|
|  <basefont>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: bgsound [glimmer] format 1`] = `
"Unclosed element \`bgsound\` (1:0)
> 1 | <bgsound>
    | ^^^^^^^^^
Cause: Unclosed element \`bgsound\`: 

|
|  <bgsound>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: br [glimmer] format 1`] = `
"<br> elements do not need end tags. You should remove it (1:4)
> 1 | <br></br>
    |    ^^^^^
Cause: <br> elements do not need end tags. You should remove it: 

|
|  </br>
|

(error occurred in 'an unknown module' @ line 1 : column 4)"
`;

exports[`snippet: col [glimmer] format 1`] = `
"<col> elements do not need end tags. You should remove it (1:5)
> 1 | <col></col>
    |     ^^^^^^
Cause: <col> elements do not need end tags. You should remove it: 

|
|  </col>
|

(error occurred in 'an unknown module' @ line 1 : column 5)"
`;

exports[`snippet: command [glimmer] format 1`] = `
"<command> elements do not need end tags. You should remove it (1:9)
> 1 | <command></command>
    |         ^^^^^^^^^^
Cause: <command> elements do not need end tags. You should remove it: 

|
|  </command>
|

(error occurred in 'an unknown module' @ line 1 : column 9)"
`;

exports[`snippet: div [glimmer] format 1`] = `
"Unclosed element \`div\` (1:0)
> 1 | <div>
    | ^^^^^
Cause: Unclosed element \`div\`: 

|
|  <div>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: embed [glimmer] format 1`] = `
"<embed> elements do not need end tags. You should remove it (1:7)
> 1 | <embed></embed>
    |       ^^^^^^^^
Cause: <embed> elements do not need end tags. You should remove it: 

|
|  </embed>
|

(error occurred in 'an unknown module' @ line 1 : column 7)"
`;

exports[`snippet: frame [glimmer] format 1`] = `
"Unclosed element \`frame\` (1:0)
> 1 | <frame>
    | ^^^^^^^
Cause: Unclosed element \`frame\`: 

|
|  <frame>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: hr [glimmer] format 1`] = `
"<hr> elements do not need end tags. You should remove it (1:4)
> 1 | <hr></hr>
    |    ^^^^^
Cause: <hr> elements do not need end tags. You should remove it: 

|
|  </hr>
|

(error occurred in 'an unknown module' @ line 1 : column 4)"
`;

exports[`snippet: imG [glimmer] format 1`] = `
"Unclosed element \`imG\` (1:0)
> 1 | <imG>
    | ^^^^^
Cause: Unclosed element \`imG\`: 

|
|  <imG>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: image [glimmer] format 1`] = `
"Unclosed element \`image\` (1:0)
> 1 | <image>
    | ^^^^^^^
Cause: Unclosed element \`image\`: 

|
|  <image>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: img [glimmer] format 1`] = `
"<img> elements do not need end tags. You should remove it (1:5)
> 1 | <img></img>
    |     ^^^^^^
Cause: <img> elements do not need end tags. You should remove it: 

|
|  </img>
|

(error occurred in 'an unknown module' @ line 1 : column 5)"
`;

exports[`snippet: input [glimmer] format 1`] = `
"<input> elements do not need end tags. You should remove it (1:7)
> 1 | <input></input>
    |       ^^^^^^^^
Cause: <input> elements do not need end tags. You should remove it: 

|
|  </input>
|

(error occurred in 'an unknown module' @ line 1 : column 7)"
`;

exports[`snippet: isindex [glimmer] format 1`] = `
"Unclosed element \`isindex\` (1:0)
> 1 | <isindex>
    | ^^^^^^^^^
Cause: Unclosed element \`isindex\`: 

|
|  <isindex>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: keygen [glimmer] format 1`] = `
"<keygen> elements do not need end tags. You should remove it (1:8)
> 1 | <keygen></keygen>
    |        ^^^^^^^^^
Cause: <keygen> elements do not need end tags. You should remove it: 

|
|  </keygen>
|

(error occurred in 'an unknown module' @ line 1 : column 8)"
`;

exports[`snippet: lINk [glimmer] format 1`] = `
"Unclosed element \`lINk\` (1:0)
> 1 | <lINk>
    | ^^^^^^
Cause: Unclosed element \`lINk\`: 

|
|  <lINk>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: link [glimmer] format 1`] = `
"<link> elements do not need end tags. You should remove it (1:6)
> 1 | <link></link>
    |      ^^^^^^^
Cause: <link> elements do not need end tags. You should remove it: 

|
|  </link>
|

(error occurred in 'an unknown module' @ line 1 : column 6)"
`;

exports[`snippet: menuitem [glimmer] format 1`] = `
"Unclosed element \`menuitem\` (1:0)
> 1 | <menuitem>
    | ^^^^^^^^^^
Cause: Unclosed element \`menuitem\`: 

|
|  <menuitem>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: meta [glimmer] format 1`] = `
"<meta> elements do not need end tags. You should remove it (1:6)
> 1 | <meta></meta>
    |      ^^^^^^^
Cause: <meta> elements do not need end tags. You should remove it: 

|
|  </meta>
|

(error occurred in 'an unknown module' @ line 1 : column 6)"
`;

exports[`snippet: nextid [glimmer] format 1`] = `
"Unclosed element \`nextid\` (1:0)
> 1 | <nextid>
    | ^^^^^^^^
Cause: Unclosed element \`nextid\`: 

|
|  <nextid>
|

(error occurred in 'an unknown module' @ line 1 : column 0)"
`;

exports[`snippet: param [glimmer] format 1`] = `
"<param> elements do not need end tags. You should remove it (1:7)
> 1 | <param></param>
    |       ^^^^^^^^
Cause: <param> elements do not need end tags. You should remove it: 

|
|  </param>
|

(error occurred in 'an unknown module' @ line 1 : column 7)"
`;

exports[`snippet: source [glimmer] format 1`] = `
"<source> elements do not need end tags. You should remove it (1:8)
> 1 | <source></source>
    |        ^^^^^^^^^
Cause: <source> elements do not need end tags. You should remove it: 

|
|  </source>
|

(error occurred in 'an unknown module' @ line 1 : column 8)"
`;

exports[`snippet: track [glimmer] format 1`] = `
"<track> elements do not need end tags. You should remove it (1:7)
> 1 | <track></track>
    |       ^^^^^^^^
Cause: <track> elements do not need end tags. You should remove it: 

|
|  </track>
|

(error occurred in 'an unknown module' @ line 1 : column 7)"
`;

exports[`snippet: wbr [glimmer] format 1`] = `
"<wbr> elements do not need end tags. You should remove it (1:5)
> 1 | <wbr></wbr>
    |     ^^^^^^
Cause: <wbr> elements do not need end tags. You should remove it: 

|
|  </wbr>
|

(error occurred in 'an unknown module' @ line 1 : column 5)"
`;

exports[`tilde-comments-1.hbs [glimmer] format 1`] = `
"Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:4)
> 1 | {{~}}
    |    ^
  2 |
Cause: Parse error on line 1:
{{~}}
---^
Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE'"
`;

exports[`tilde-comments-2.hbs [glimmer] format 1`] = `
"Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:4)
> 1 | {{~~}}
    |    ^
  2 |
Cause: Parse error on line 1:
{{~~}}
---^
Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE'"
`;
